--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Gut Health Assessment | Gut Healing Academy</title>
+    <meta name="description" content="Discover your gut type in 3 minutes and get a protocol that actually works. Built by registered dietitians and Monash-certified FODMAP specialists.">
 
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Gut Health Assessment | Gut Healing Academy">
+    <meta property="og:description" content="Discover your gut type in 3 minutes. Get a protocol that actually works.">
+    <meta property="og:type" content="website">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- Preload avatar -->
+    <link rel="preload" href="assets/rebecca-avatar.png" as="image">
+    <style>
+        /* Fallback avatar styles */
+        .header-avatar, .message-avatar {
+            background: linear-gradient(135deg, #075E54 0%, #128C7E 100%);
+            color: white;
+            font-weight: 600;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- CHAT PAGE -->
+    <div class="chat-page active" id="chatPage">
+        <!-- Chat Header -->
+        <header class="chat-header">
+            <img src="assets/rebecca-avatar.png" alt="Rebecca Taylor" class="header-avatar" onerror="this.onerror=null; this.src='assets/rebecca-avatar.svg';">
+            <div class="header-info">
+                <h2>Rebecca Taylor, RNutr</h2>
+                <span class="online-status">
+                    <span class="online-dot"></span> Online
+                </span>
+            </div>
+        </header>
+
+        <!-- Chat Area -->
+        <div class="chat-area" id="chatArea">
+            <!-- Messages will be dynamically inserted here -->
+        </div>
+
+        <!-- Input Container -->
+        <div id="inputContainer">
+            <!-- Input controls will be dynamically inserted here -->
+        </div>
+
+        <!-- Disclaimer Footer -->
+        <footer class="disclaimer-footer">
+            <div class="disclaimer-content">
+                <div class="disclaimer-header">
+                    <span class="disclaimer-icon">&#9877;</span>
+                    <span class="disclaimer-title">Medical Disclaimer</span>
+                </div>
+                <p>
+                    This assessment is for educational purposes only and does not constitute medical advice, diagnosis, or treatment. Consult a healthcare provider for medical concerns.
+                </p>
+            </div>
+        </footer>
+    </div>
+
+    <!-- Scripts -->
+    <script src="js/quiz-content.js"></script>
+    <script src="js/quiz-logic.js"></script>
+    <script src="js/quiz-app.js"></script>
+</body>
+</html>
