--- a/legal/index.html
+++ b/legal/index.html
@@ -1,1 +1,293 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <title>Privacy Policy - Gut Healing Academy</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            font-size: 17px;
+            line-height: 1.7;
+            color: #2D3436;
+            background-color: #FDF8F5;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 40px;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 20px;
+            }
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 40px;
+            padding-bottom: 30px;
+            border-bottom: 2px solid #A4C3B2;
+        }
+
+        .logo {
+            font-size: 24px;
+            font-weight: 700;
+            color: #264653;
+            margin-bottom: 20px;
+        }
+
+        h1 {
+            font-size: 32px;
+            color: #264653;
+            margin-bottom: 10px;
+        }
+
+        .last-updated {
+            color: #6B9080;
+            font-size: 14px;
+        }
+
+        h2 {
+            font-size: 22px;
+            color: #264653;
+            margin-top: 35px;
+            margin-bottom: 15px;
+        }
+
+        h3 {
+            font-size: 18px;
+            color: #264653;
+            margin-top: 25px;
+            margin-bottom: 10px;
+        }
+
+        p {
+            margin-bottom: 15px;
+        }
+
+        ul, ol {
+            margin-bottom: 15px;
+            padding-left: 25px;
+        }
+
+        li {
+            margin-bottom: 8px;
+        }
+
+        a {
+            color: #6B9080;
+            text-decoration: underline;
+        }
+
+        a:hover {
+            color: #264653;
+        }
+
+        .highlight-box {
+            background-color: #E8F4F0;
+            border-left: 4px solid #6B9080;
+            padding: 20px;
+            margin: 25px 0;
+            border-radius: 0 8px 8px 0;
+        }
+
+        .highlight-box h3 {
+            margin-top: 0;
+            color: #264653;
+        }
+
+        footer {
+            margin-top: 60px;
+            padding-top: 30px;
+            border-top: 2px solid #A4C3B2;
+        }
+
+        .footer-disclaimer {
+            background-color: #E8F4F0;
+            padding: 20px;
+            border-radius: 8px;
+            margin-bottom: 25px;
+            font-size: 14px;
+            line-height: 1.6;
+        }
+
+        .footer-nav {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .footer-nav a {
+            color: #6B9080;
+            text-decoration: none;
+            margin: 0 10px;
+            font-size: 15px;
+        }
+
+        .footer-nav a:hover {
+            text-decoration: underline;
+            color: #264653;
+        }
+
+        .footer-nav span {
+            color: #A4C3B2;
+        }
+
+        .copyright {
+            text-align: center;
+            color: #6B9080;
+            font-size: 14px;
+        }
+
+        @media print {
+            body {
+                background-color: white;
+            }
+            .container {
+                max-width: 100%;
+            }
+            .footer-nav {
+                display: none;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <header>
+            <div class="logo">Gut Healing Academy</div>
+            <h1>Privacy Policy</h1>
+            <p class="last-updated">Last Updated: December 11, 2025</p>
+        </header>
+
+        <main>
+            <p>Gut Healing Academy ("we," "us," or "our") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, use our services, or participate in our programs.</p>
+
+            <h2>1. Information We Collect</h2>
+
+            <h3>Information You Provide Directly</h3>
+            <p>We collect information you voluntarily provide when you:</p>
+            <ul>
+                <li><strong>Complete our health assessment quiz:</strong> This includes your responses about digestive symptoms, health history, lifestyle factors, and wellness goals. This information helps us personalize your experience and recommend appropriate protocols.</li>
+                <li><strong>Create an account or purchase a membership:</strong> Name, email address, billing information, and payment details.</li>
+                <li><strong>Communicate with us:</strong> Any information you include in emails, contact forms, or support requests.</li>
+                <li><strong>Participate in our community:</strong> Posts, comments, and interactions within our member community.</li>
+            </ul>
+
+            <h3>Information Collected Automatically</h3>
+            <p>When you access our website, we may automatically collect:</p>
+            <ul>
+                <li>Device information (browser type, operating system, device type)</li>
+                <li>IP address and approximate geographic location</li>
+                <li>Pages visited, time spent on pages, and navigation patterns</li>
+                <li>Referring website or source</li>
+                <li>Cookies and similar tracking technologies</li>
+            </ul>
+
+            <div class="highlight-box">
+                <h3>Health Information Notice</h3>
+                <p>The health-related information you provide in our quiz and during program participation is used solely to personalize your educational experience. We are not a healthcare provider, and this information is not protected health information (PHI) under HIPAA. However, we treat all health-related data with heightened security and care.</p>
+            </div>
+
+            <h2>2. How We Use Your Information</h2>
+            <p>We use the information we collect to:</p>
+            <ul>
+                <li>Provide personalized protocol recommendations based on your quiz responses</li>
+                <li>Process your membership and payment transactions</li>
+                <li>Send you educational content, program updates, and service-related communications</li>
+                <li>Send marketing emails (only with your consent, and you can unsubscribe anytime)</li>
+                <li>Improve our website, programs, and user experience</li>
+                <li>Respond to your inquiries and provide customer support</li>
+                <li>Analyze usage patterns to enhance our services</li>
+                <li>Comply with legal obligations</li>
+            </ul>
+
+            <h2>3. How We Share Your Information</h2>
+            <p>We do not sell your personal information. We may share your information with:</p>
+
+            <h3>Service Providers</h3>
+            <ul>
+                <li>Payment processors (Stripe, PayPal) to process transactions</li>
+                <li>Email marketing platforms to send communications</li>
+                <li>Automation tools (Make.com) to process quiz data and trigger personalized sequences</li>
+                <li>Analytics providers to understand website usage</li>
+                <li>Hosting providers to maintain our website and services</li>
+            </ul>
+
+            <h3>Expert Practitioners</h3>
+            <p>If you book a consultation with one of our partnered practitioners through our platform, we will share relevant information (such as your quiz results and any notes you provide) with that practitioner to facilitate your session. Practitioners are bound by confidentiality agreements.</p>
+
+            <h3>Legal Requirements</h3>
+            <p>We may disclose your information if required by law, court order, or governmental authority, or if we believe disclosure is necessary to protect our rights, your safety, or the safety of others.</p>
+
+            <h2>4. Data Retention</h2>
+            <p>We retain your information for as long as your account is active or as needed to provide services. If you cancel your membership, we will retain your data for up to 3 years for legal and business purposes, after which it will be securely deleted. You may request earlier deletion by contacting us.</p>
+
+            <h2>5. Your Rights and Choices</h2>
+            <p>You have the right to:</p>
+            <ul>
+                <li><strong>Access:</strong> Request a copy of the personal information we hold about you</li>
+                <li><strong>Correction:</strong> Request that we correct inaccurate or incomplete information</li>
+                <li><strong>Deletion:</strong> Request that we delete your personal information (subject to legal retention requirements)</li>
+                <li><strong>Opt-out:</strong> Unsubscribe from marketing emails at any time using the link in any email</li>
+                <li><strong>Data Portability:</strong> Request your data in a portable format</li>
+            </ul>
+            <p>To exercise these rights, contact us at <a href="mailto:privacy@guthealing.academy">privacy@guthealing.academy</a>.</p>
+
+            <h2>6. Cookies and Tracking</h2>
+            <p>We use cookies and similar technologies to:</p>
+            <ul>
+                <li>Remember your preferences and login status</li>
+                <li>Analyze website traffic and usage patterns</li>
+                <li>Personalize content and advertising</li>
+                <li>Track the effectiveness of our marketing campaigns</li>
+            </ul>
+            <p>You can control cookies through your browser settings. Note that disabling cookies may affect your experience on our website.</p>
+
+            <h2>7. Third-Party Links</h2>
+            <p>Our website may contain links to third-party websites, services, or resources. We are not responsible for the privacy practices of these third parties. We encourage you to review their privacy policies before providing any personal information.</p>
+
+            <h2>8. Data Security</h2>
+            <p>We implement appropriate technical and organizational measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction. These include encryption, secure servers, and access controls. However, no method of transmission over the Internet is 100% secure, and we cannot guarantee absolute security.</p>
+
+            <h2>9. International Data Transfers</h2>
+            <p>Your information may be transferred to and processed in countries other than your country of residence. These countries may have different data protection laws. By using our services, you consent to such transfers.</p>
+
+            <h2>10. Children's Privacy</h2>
+            <p>Our services are not intended for individuals under 18 years of age. We do not knowingly collect personal information from children. If we become aware that we have collected information from a child under 18, we will take steps to delete it.</p>
+
+            <h2>11. Changes to This Policy</h2>
+            <p>We may update this Privacy Policy from time to time. We will notify you of any material changes by posting the new policy on this page and updating the "Last Updated" date. Your continued use of our services after changes constitutes acceptance of the updated policy.</p>
+
+            <h2>12. Contact Us</h2>
+            <p>If you have questions about this Privacy Policy, contact us at:</p>
+            <p>Email: <a href="mailto:privacy@guthealing.academy">privacy@guthealing.academy</a></p>
+        </main>
+
+        <footer>
+            <div class="footer-disclaimer">
+                This program is for educational purposes only and does not constitute medical advice, diagnosis, or treatment. It is not a substitute for professional medical consultation. If you are experiencing severe symptoms, unexplained weight loss, blood in stool, or any symptoms that concern you, please consult a qualified healthcare provider immediately.
+            </div>
+            <nav class="footer-nav">
+                <a href="index.html">Privacy Policy</a>
+                <span>|</span>
+                <a href="terms.html">Terms of Service</a>
+                <span>|</span>
+                <a href="disclaimer.html">Medical Disclaimer</a>
+                <span>|</span>
+                <a href="contact.html">Contact Us</a>
+            </nav>
+            <p class="copyright">© 2025 Gut Healing Academy. All rights reserved.</p>
+        </footer>
+    </div>
+</body>
+</html>
