--- a/offer/index.html
+++ b/offer/index.html
@@ -497,7 +497,7 @@
           </div>
 
           <div class="live-qa-access">
-            <p><span class="trial-badge">Trial</span> Watch the recording</p>
+            <p><span class="trial-badge">Trial</span> Join live but can't ask questions</p>
             <p><span class="full-badge">Full Member</span> Join live & ask questions</p>
           </div>
         </div>
